src/util/test/redis_yamls/redis-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-master
  name: redis-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-master
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/redis-yamls-default: "true"
        io.kompose.service: redis-master
    spec:
      containers:
        - image: registry.k8s.io/redis:e2e
          name: redis-master
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
