src/util/test/redis_yamls/redis-yamls-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: redis-yamls-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/redis-yamls-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/redis-yamls-default: "true"
